--- a/releases/north-west-line.html
+++ b/releases/north-west-line.html
@@ -381,17 +381,18 @@
             <h2 class="accordion-header" id="heading2.1">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2.1"
                 aria-expanded="true" aria-controls="collapse2.1">
-                <b>Version 2.1 - 10/12/24</b>
+                <b>Version 3.0 - 10/08/25</b>
               </button>
             </h2>
             <div id="collapse2.1" class="accordion-collapse collapse show" aria-labelledby="heading2.1"
               data-bs-parent="#accordRoutes">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Fixed some PSD texture bugs at Caroye
+                  - Updated RATiS UI <br>
+                  - Support for WB Direction driving (CTS to STC)
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v081224/Railway.-.NWL.v2.1.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-NWL_3.0.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
               </div>
@@ -412,7 +413,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v081224/North.West.Line.v0.8.zip"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508/North.West.Line.v0.8.zip"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
               </div>
