--- a/releases/north-west-line.html
+++ b/releases/north-west-line.html
@@ -55,11 +55,11 @@
     </label>
 
     <nav class="navbar navbar-mobile">
-      <a href="./index.html" class="nav-item">Home</a>
-      <a href="./about.html" class="nav-item">About</a>
-      <a href="./openbve.html" class="nav-item active">OpenBVE</a>
-      <a href="./omsi-2.html" class="nav-item">OMSI 2</a>
-      <a href="./blog.html" class="nav-item">Blog</a>
+      <a href="../index.html" class="nav-item">Home</a>
+      <a href="../about.html" class="nav-item">About</a>
+      <a href="../openbve.html" class="nav-item active">OpenBVE</a>
+      <a href="../omsi-2.html" class="nav-item">OMSI 2</a>
+      <a href="../blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item">
         <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
           <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
