2025-08 Feature Update for Version Next (5.0.0)

--- a/openbve.html
+++ b/openbve.html
@@ -113,14 +113,14 @@
             </div>
 
             <!-- Sort Dropdown -->
-            <!-- <div class="portfolio-sort">
+            <div class="portfolio-sort">
               <label for="sort-options">Sort By:</label>
               <select id="sort-options">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
                 <option value="alphabetical">Alphabetical</option>
               </select>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
@@ -323,19 +323,19 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df tr mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2025">
+            data-year="2025" data-date="25-01">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/devfile-op.png" alt="dfop">
               <div class="hover-content-blog align-items-center">
                 <h4>Dev Files (STARiS/CDD-CLD/VFD)</h4>
-                <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                <a class="info" href="releases/dev-files-staris-cddcld-vfd.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-year="2025" data-date="25-08">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/nwl2.0.png" alt="nwl2.0">
               <div class="hover-content-blog">
@@ -347,12 +347,12 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-year="2025" data-date="25-08">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ael2.0.png" alt="ael2.0">
               <div class="hover-content-blog">
                 <h4>Airport Express Line</h4>
-                <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
+                <a class="info" href="releases/airport-express-line.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
