--- a/releases/airport-express-line.html
+++ b/releases/airport-express-line.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>North West Line | SMRTO</title>
+  <title>Airport Express Line | SMRTO</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -69,7 +69,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(../img/releases-ss/nwl3.png); height: 100vh;">
+    style="background-image: url(../img/releases-ss/ael1.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -86,7 +86,7 @@
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">North West Line</h1>
+                <h1 class="brc">Airport Express Line</h1>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
         </div>
       </div>
     </div>
-    <div style="background-color: #009645; width: 100%; height: 10px;"></div>
+    <div style="background-color: #27279d; width: 100%; height: 10px;"></div>
   </section>
 
 
@@ -141,7 +141,8 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The North West Line is a fictional line mainly
+                    <p style="text-align: center; padding-bottom: 2em;">The Airport Express Line is a fictional line
+                      mainly
                       based on
                       Singapore and New York. The route has been created using Routebuilder, by Nickgoh45. Upgrades are
                       done
@@ -155,22 +156,22 @@
 
 
         <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-          <a href="../img/releases-ss/nwl1.png" class="portfolio-img" id="nwl1"><img src="../img/releases-ss/nwl1.png"
-              class="img-fluid" id="nwl1-img" alt="nwl1-img"></a>
+          <a href="../img/releases-ss/ael1.png" class="portfolio-img" id="ael1"><img src="../img/releases-ss/ael1.png"
+              class="img-fluid" id="ael1-img" alt="ael1-img"></a>
         </div>
 
         <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/nwl2.png" class="portfolio-img" id="nwl2" alt="nwl2"><img
-                    src="../img/releases-ss/nwl2.png" class="img-fluid" id="nwl2-img" alt="nwl2-img"></a>
+                <a href="../img/releases-ss/ael2.png" class="portfolio-img" id="ael2" alt="ael2"><img
+                    src="../img/releases-ss/ael2.png" class="img-fluid" id="ael2-img" alt="ael2-img"></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/nwl3.png" class="portfolio-img" id="nwl3" alt="nwl3"><img
-                    src="../img/releases-ss/nwl3.png" class="img-fluid" id="nwl3-img" alt="nwl3-img"></a>
+                <a href="../img/releases-ss/ael3.png" class="portfolio-img" id="ael3" alt="ael3"><img
+                    src="../img/releases-ss/ael3.png" class="img-fluid" id="ael3-img" alt="ael3-img"></a>
               </div>
             </div>
           </div>
@@ -201,8 +202,8 @@
     <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
       <h3 class="ld-s-title">Line Diagram</h3>
       <div class="row row-line-diag justify-content-center">
-        <a href="../img/releases-ss/nwl-diag.png" id="line-nwl" class="portfolio-img">
-          <img src="../img/releases-ss/nwl-diag.png" id="line-nwl-img" class="img-fluid" alt="cover-page">
+        <a href="../img/releases-ss/ael-diag.png" id="line-ael" class="portfolio-img">
+          <img src="../img/releases-ss/ael-diag.png" id="line-ael-img" class="img-fluid" alt="cover-page">
         </a>
       </div>
     </div>
@@ -216,116 +217,50 @@
             <a href="#">
               <div class="stationBlockChildItem">
                 <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 1
+                  <div class="station-pill-round" style="background-color: #27279d; color: #FFF;">
+                    AE 1
                   </div>
                   <div class="station-pill-round" style="background-color: #ffbb00; color: #000;">
-                    HL 13
+                    HL 14
                   </div>
                 </div>
-                <h4 class="stn" style=" width: 106px;">South Coast</h4>
+                <h4 class="stn" style=" width: 77px;">Stadium</h4>
               </div>
             </a>
             <a href="#">
               <div class="stationBlockChildItem">
                 <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 2
+                  <div class="station-pill-round-single" style="background-color: #27279d; color: #fff;">
+                    AE 2
                   </div>
                 </div>
-                <h4 class="stn" style=" width: 87px;">Westway</h4>
+                <h4 class="stn" style=" width: 147px;">Exhibiton Centre</h4>
               </div>
             </a>
             <a href="#">
               <div class="stationBlockChildItem">
                 <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 3
+                  <div class="station-pill-round-single" style="background-color: #27279d; color: #fff;">
+                    AE 3
                   </div>
                 </div>
-                <h4 class="stn" style=" width: 87px;">Reservoir</h4>
+                <h4 class="stn" style=" width: 71px;">Airport</h4>
               </div>
             </a>
             <a href="#">
               <div class="stationBlockChildItem">
                 <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 4
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 87px;">Lakeview</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 5
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 67px;">District</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 6
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 106px;">World Plaza</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 7
-                  </div>
-                  <div class="station-pill-round" style="background-color: #660099; color: #FFF;">
-                    KS 7
-                  </div>
-                  <div class="station-pill-round" style="background-color: #ff2a2a; color: #FFF;">
-                    BL 10
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 129px;">Blackton South</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 8
-                  </div>
-                  <div class="station-pill-round" style="background-color: #660099; color: #FFF;">
-                    KS 8
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 71px;">Caroye</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 9
-                  </div>
-                </div>
-                <h4 class="stn" style=" width: 71px;">Horizon</h4>
-              </div>
-            </a>
-            <a href="#">
-              <div class="stationBlockChildItem">
-                <div class="d-flex flex-row">
-                  <div class="station-pill-round" style="background-color: #009645; color: #FFF;">
-                    NW 10
+                  <div class="station-pill-round" style="background-color: #27279d; color: #fff;">
+                    AE 4
                   </div>
                   <div class="station-pill-round" style="background-color: #ecb3b3; color: #000;">
-                    EF 15
+                    EF 1
+                  </div>
+                  <div class="station-pill-round" style="background-color: #000; color: #fff;">
+                    CS 4
                   </div>
                 </div>
-                <h4 class="stn" style=" width: 105px;">City Square</h4>
+                <h4 class="stn" style=" width: 118px;">East Harbour</h4>
               </div>
             </a>
           </div>
@@ -368,7 +303,7 @@
     <div class="about-me-stations text-center wow fadeInUp" data-wow-delay="900ms">
       <div class="alert alert-warning alert-dismissible wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
-        The support for the legacy C651/A/B/C/D has been deprecated. Download <b>Version 0.8</b> to use it for
+        The support for the legacy C651/A/B/C/D has been deprecated. Download <b>Version 1.0</b> to use it for
         the <b>Legacy Trains</b>.
         <button type="button" class="btn-close cls-warning" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
@@ -389,11 +324,10 @@
               <div class="accordion-body">
                 <h3 class="changelog">
                   - Updated RATiS UI <br>
-                  - Support for WB Direction driving (CTS to STC) <br>
                   - Updated PMTPG for all stations
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-NWL_3.0.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-ael_3.0.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
               </div>
@@ -401,20 +335,20 @@
           </div>
 
           <div class="accordion-item">
-            <h2 class="accordion-header" id="heading0.8">
+            <h2 class="accordion-header" id="heading1.0">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse0.8" aria-expanded="false" aria-controls="collapse0.8">
-                <b>Version 0.8 - 2010</b>
+                data-bs-target="#collapse1.0" aria-expanded="false" aria-controls="collapse1.0">
+                <b>Version 1.0 - 2022</b>
               </button>
             </h2>
-            <div id="collapse0.8" class="accordion-collapse collapse" aria-labelledby="heading0.8"
+            <div id="collapse1.0" class="accordion-collapse collapse" aria-labelledby="heading1.0"
               data-bs-parent="#accordRoutes">
               <div class="accordion-body">
                 <h3 class="changelog">
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/North.West.Line.v0.8.zip"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway.-.AEL.Legacy.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
               </div>
@@ -616,17 +550,17 @@
 
     function updateHrefForDarkMode() {
       /* Banners */
-      const link = document.getElementById('line-nwl');
-      const img = document.getElementById('line-nwl-img');
+      const link = document.getElementById('line-ael');
+      const img = document.getElementById('line-ael-img');
       const isDarkMode = document.body.classList.contains('dark-mode');
 
 
       if (isDarkMode) {
-        link.href = '../img/releases-ss/nwl-diag-dark.png';
-        img.src = '../img/releases-ss/nwl-diag-dark.png';
+        link.href = '../img/releases-ss/ael-diag-dark.png';
+        img.src = '../img/releases-ss/ael-diag-dark.png';
       } else {
-        link.href = '../img/releases-ss/nwl-diag.png';
-        img.src = '../img/releases-ss/nwl-diag.png';
+        link.href = '../img/releases-ss/ael-diag.png';
+        img.src = '../img/releases-ss/ael-diag.png';
       }
     }
   </script>
