--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
             <div class="footer-content d-flex flex-column align-items-center text-center">
                 <!-- Social Links -->
                 <div class="social-info">
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
                             aria-hidden="true"></i></a>
                 </div>
                 <!-- Copywrite Text -->
