--- a/omsi-2.html
+++ b/omsi-2.html
@@ -264,12 +264,12 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2025">
+            data-year="2024" data-date="24-12">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ht.png" alt="ht">
               <div class="hover-content-blog align-items-center">
                 <h4>Hillgrove Town</h4>
-                <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                <a class="info" href="releases/hillgrove-town.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -345,8 +345,8 @@
             <div class="footer-content d-flex flex-column align-items-center text-center">
                 <!-- Social Links -->
                 <div class="social-info">
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
                             aria-hidden="true"></i></a>
                 </div>
                 <!-- Copywrite Text -->
