--- a/releases/dev-files-staris-cddcld-vfd.html
+++ b/releases/dev-files-staris-cddcld-vfd.html
@@ -110,10 +110,10 @@
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
               <div class="social_links">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/north-west-line.html"
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/dev-files-staris-cddcld-vfd.html"
                   title="Facebook">
                   <i class="fa-brands fa-facebook"></i> </a>
-                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/north-west-line.html&text=Dev Files (STARiS/CDD-CLD/VFD)"
+                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/dev-files-staris-cddcld-vfd.html&text=Dev Files (STARiS/CDD-CLD/VFD)"
                   title="X (Twitter)">
                   <i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -231,25 +231,24 @@
 
 
 
-  <footer class="footer-area">
-    <div class="container">
-      <div class="footer-content d-flex flex-column align-items-center text-center">
-        <!-- Social Links -->
-        <div class="social-info">
-          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+    <footer class="footer-area">
+        <div class="container">
+            <div class="footer-content d-flex flex-column align-items-center text-center">
+                <!-- Social Links -->
+                <div class="social-info">
+                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
+                            aria-hidden="true"></i></a>
+                </div>
+                <!-- Copywrite Text -->
+                <div class="copywrite-text">
+                    <p>&copy;
+                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+                    </p>
+                </div>
+            </div>
         </div>
-        <!-- Copywrite Text -->
-        <div class="copywrite-text">
-          <p>&copy;
-            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -286,7 +285,6 @@
     if (localStorage.getItem('dark-mode') === 'enabled') {
       document.body.classList.add('dark-mode');
       updateThemeIcon('dark');
-      updateHrefForDarkMode();
     } else {
       updateThemeIcon('light');
     }
@@ -302,7 +300,6 @@
         localStorage.setItem('dark-mode', 'disabled');
         updateThemeIcon('light');
       }
-      updateHrefForDarkMode();
     });
 
     // Function to update the theme icon with animation
@@ -327,21 +324,6 @@
       }, 300); // Match the duration of the CSS transition
     }
 
-    function updateHrefForDarkMode() {
-      /* Banners */
-      const link = document.getElementById('line-nwl');
-      const img = document.getElementById('line-nwl-img');
-      const isDarkMode = document.body.classList.contains('dark-mode');
-
-
-      if (isDarkMode) {
-        link.href = '../img/releases-ss/nwl-diag-dark.png';
-        img.src = '../img/releases-ss/nwl-diag-dark.png';
-      } else {
-        link.href = '../img/releases-ss/nwl-diag.png';
-        img.src = '../img/releases-ss/nwl-diag.png';
-      }
-    }
   </script>
 
 </body>
