2025-08 Feature Update for Version Next (5.0.0)

--- a/omsi-2.html
+++ b/omsi-2.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-breakpoints.css">
   <link rel="stylesheet" href="css/dark-mode.css">
-  <link rel="stylesheet" href="css/navbar.css">
+
 
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/glightbox.min.css">
@@ -105,21 +105,22 @@
             <!-- Filter Buttons -->
             <div class="portfolio-filter">
               <button class="btn btn-filter active" data-filter="*">All Releases</button>
-              <button class="btn btn-filter" data-filter=".rt">Routes</button>
+              <button class="btn btn-filter" data-filter=".rt">Maps</button>
               <button class="btn btn-filter" data-filter=".bs">Buses</button>
               <button class="btn btn-filter" data-filter=".rp">Repaints</button>
               <button class="btn btn-filter" data-filter=".df">Developer Files</button>
             </div>
 
             <!-- Sort Dropdown -->
-            <!-- <div class="portfolio-sort">
+            <div class="portfolio-sort">
               <label for="sort-options">Sort By:</label>
               <select id="sort-options">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
                 <option value="alphabetical">Alphabetical</option>
               </select>
-            </div> -->
+            </div>
+
           </div>
         </div>
       </div>
@@ -135,7 +136,7 @@
           style="margin-top: 1em; cursor: default; font-size: 14px;">
           Only attempt the following if you are familiar with Modifying OMSI contents, and have backed up your
           item. We will not assume responsiblity should things go wrong.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-danger" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
 
         <!-- Accordion -->
@@ -264,7 +265,7 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024" data-date="24-12">
+            data-date="2024-12">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ht.png" alt="ht">
               <div class="hover-content-blog align-items-center">
@@ -276,19 +277,19 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-date="2024-03">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/wt.png" alt="wt">
               <div class="hover-content-blog">
                 <h4>Woodlands Town</h4>
-                <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                <a class="info" href="releases/woodlands-town.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-date="2024-09">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/su18.png" alt="su18">
               <div class="hover-content-blog">
@@ -300,7 +301,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-date="2024-03">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/vdl.png" alt="vdl">
               <div class="hover-content-blog">
@@ -312,7 +313,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-03">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/dfA.png" alt="dfom">
               <div class="hover-content-blog">
@@ -324,7 +325,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs rp mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-09">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/jw.png" alt="jw">
               <div class="hover-content-blog">
