--- a/releases/woodlands-town.html
+++ b/releases/woodlands-town.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Hillgrove Town | SMRTO</title>
+  <title>Woodlands Town | SMRTO</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -69,7 +69,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(../img/releases-ss/ht43.jpg); height: 100vh;">
+    style="background-image: url(https://i.imgur.com/EhVYunI.jpeg); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -86,7 +86,7 @@
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">Hillgrove Town</h1>
+                <h1 class="brc">Woodlands Town</h1>
               </div>
             </div>
           </div>
@@ -110,10 +110,10 @@
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
               <div class="social_links">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/hillgrove-town.html"
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/Woodlands-town.html"
                   title="Facebook">
                   <i class="fa-brands fa-facebook"></i> </a>
-                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/hillgrove-town.html&text=Hillgrove Town"
+                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/Woodlands-town.html&text=Woodlands Town"
                   title="X (Twitter)">
                   <i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -140,7 +140,8 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Hillgrove Town Bus Package is one of seven bus packages under the SMRTO (SMV).</p>
+                    <p style="text-align: center; padding-bottom: 2em;">The Woodlands Town Bus Package is one of seven
+                      bus packages under the SMRTO (SMV).</p>
                   </div>
                 </div>
               </div>
@@ -150,38 +151,32 @@
 
 
         <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-          <a href="../img/releases-ss/ht43.jpg" class="portfolio-img" id="ht43"><img
-              src="../img/releases-ss/ht43.jpg" class="img-fluid" id="ht43-img" alt="ht43-img"></a>
+          <a href="https://i.imgur.com/EhVYunI.jpeg" class="portfolio-img" id="ht43"><img src="https://i.imgur.com/EhVYunI.jpeg"
+              class="img-fluid" id="wto-img" alt="wto-img"></a>
         </div>
 
         <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/ht41.jpg" class="portfolio-img" id="r151A" alt="r151A"><img
-                    src="../img/releases-ss/ht41.jpg" class="img-fluid" id="r151A-img" alt="r151A-img"></a>
+                <a href="../img/releases-ss/wto1.jpg" class="portfolio-img"><img
+                    src="../img/releases-ss/wto1.jpg" class="img-fluid" alt="WT-1"></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/ht42.jpg" class="portfolio-img" id="ht42" alt="ht42"><img
-                    src="../img/releases-ss/ht42.jpg" class="img-fluid" id="ht42-img" alt="ht42-img"></a>
+                <a href="https://i.imgur.com/yf6lyYx.jpeg" class="portfolio-img"><img
+                    src="https://i.imgur.com/yf6lyYx.jpeg" class="img-fluid" alt="WT-2"></a>
               </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/ht44.jpg" class="portfolio-img" id="ht44" alt="ht44"><img
-                    src="../img/releases-ss/ht44.jpg" class="img-fluid" id="ht44-img" alt="ht44-img"></a>
+                <a href="../img/releases-ss/wto2.jpg" class="portfolio-img"><img
+                    src="../img/releases-ss/wto2.jpg" class="img-fluid" alt="WT-2"></a>
               </div>
             </div>
 
-            <div class="col-lg-6 col-md-6">
-              <div class="thumb">
-                <a href="../img/releases-ss/ht45.jpg" class="portfolio-img" id="ht45" alt="ht45"><img
-                    src="../img/releases-ss/ht45.jpg" class="img-fluid" id="ht45-img" alt="ht45-img"></a>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -199,20 +194,20 @@
           </tr>
           <tr class="info-det">
             <td class="first">Present Contract Term</td>
-            <td class="second"><u>Tendered Package 2nd Term (Contract PT557-2)</u> <br> Oct 2024 - 2029</td>
+            <td class="second"><u>Tendered Package 1st Term (Contract PT558)</u> <br> Oct 2021 - Oct 2025</td>
           </tr>
           <!-- <tr class="info-det">
                     <td class="first">Upcoming Contract Term</td>
-                    <td class="second"><u>Tendered Package 2nd Term (Contract PT557-2)</u> <br> Oct 2024 - 2029</td>
+                    <td class="second"><u>Tendered Package 2nd Term (Contract PT557-2)</u> <br> Oct 2025 - 2030</td>
                   </tr> -->
           <tr class="info-det">
             <td class="first">Bus Services</td>
-            <td class="second">100, 300, 301, 302, 307, 308, 971, 974, 975, 976, 979, 982, 983, 989, 990 & 991 <br>
-              [16 bus routes]</td>
+            <td class="second">401, 407 (IKEA Shuttle), 858, 881, 882, 883, 885, 886, 889, 901, 902, 903, 911/T
+              & 965 <br> [15 bus routes]</td>
           </tr>
           <tr class="info-det">
             <td class="first">Bus Depot</td>
-            <td class="second">Normanton Bus Depot</td>
+            <td class="second">Woodlands Bus Depot, Hillview Bus Depot</td>
           </tr>
         </tbody>
       </table>
@@ -232,83 +227,73 @@
             </tr>
           <tbody>
             <tr class="info-det">
-              <td class="first">100 (BRT1/BRT2)</td>
-              <td class="second">Tengah Park <-> Townsville</td>
-              <td class="first">Bus Rapid Transit</td>
-            </tr>
-            <tr class="info-det">
-              <td class="first">300</td>
-              <td class="second">Hillgrove ↺ Hillgrove Ave 3</td>
+              <td class="first">401</td>
+              <td class="second">Edgeview ↺ Mount Faber</td>
               <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">301</td>
-              <td class="second">Hillgrove ↺ Burlington Close</td>
+              <td class="first">407</td>
+              <td class="second">IKEA Hillview ↺ Edgeview </td>
               <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">302</td>
-              <td class="second">Hillgrove ↺ Brickland Crescent</td>
+              <td class="first">858</td>
+              <td class="second">Woodlands ↺ International Airport</td>
               <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">307</td>
-              <td class="second">Hillgrove ↺ Hilltop Lane</td>
+              <td class="first">881</td>
+              <td class="second">Balmoral ↺ Balmoral Crescent</td>
               <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">308</td>
-              <td class="second">Hillgrove ↺ Hillgrove Link</td>
+              <td class="first">882</td>
+              <td class="second">Edgeview ↺ International Airport</td>
+              <td class="first">Trunk</td>
+            </tr>
+            <tr class="info-det">
+              <td class="first">883</td>
+              <td class="second">Balmoral ↺ Balmoral Close</td>
               <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">971</td>
-              <td class="second">West Terra ↺ Hillgrove MRT</td>
+              <td class="first">885</td>
+              <td class="second">Balmoral ↺ Edgeview</td>
               <td class="first">Trunk</td>
             </tr>
             <tr class="info-det">
-              <td class="first">974</td>
-              <td class="second">West Terra ↺ Townsville Crescent</td>
+              <td class="first">886</td>
+              <td class="second">Balmoral ↺ International Airport</td>
               <td class="first">Trunk</td>
             </tr>
             <tr class="info-det">
-              <td class="first">975</td>
-              <td class="second">Bukit Petir ↺ Woodneuk End</td>
+              <td class="first">889</td>
+              <td class="second">Admiralty ↺ Edgeview Oval</td>
               <td class="first">Trunk</td>
             </tr>
             <tr class="info-det">
-              <td class="first">976</td>
-              <td class="second">Bukit Petir ⇔ Hillgrove</td>
-              <td class="first">Trunk</td>
+              <td class="first">901</td>
+              <td class="second">Admiralty ↺ Rivervale Drive</td>
+              <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">979</td>
-              <td class="second">Tomlinson ↺ Brickland Crescent</td>
-              <td class="first">Trunk</td>
+              <td class="first">902</td>
+              <td class="second">Woodlands ↺ Republic Polytechnic</td>
+              <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">982</td>
-              <td class="second">Tomlinson ↺ Woodneuk Town Cemy</td>
-              <td class="first">Trunk</td>
+              <td class="first">903</td>
+              <td class="second">Admiralty ↺ Lakewood Circle</td>
+              <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">983</td>
-              <td class="second">Hillgrove ↺ Bukit Petir Rd</td>
-              <td class="first">Trunk</td>
+              <td class="first">911/T</td>
+              <td class="second">Woodlands ↺ Woodlands St 81 / Woodlands Loop (911T)</td>
+              <td class="first">Feeder</td>
             </tr>
             <tr class="info-det">
-              <td class="first">989</td>
-              <td class="second">Hillgrove ↺ Peace Village Crescent</td>
-              <td class="first">Trunk</td>
-            </tr>
-            <tr class="info-det">
-              <td class="first">990</td>
-              <td class="second">Hospital Avenue ↺ Edgeville Hill</td>
-              <td class="first">Trunk</td>
-            </tr>
-            <tr class="info-det">
-              <td class="first">991</td>
-              <td class="second">Hospital Avenue ↺ Tennessee Circle</td>
+              <td class="first">965</td>
+              <td class="second">Woodlands ⇔ Admiralty</td>
               <td class="first">Trunk</td>
             </tr>
           </tbody>
@@ -332,7 +317,6 @@
               <td class="second">
                 MAN NL323F A22 (LHD)<br>
                 MAN NL323F A22 Euro 6 (LHD) <br>
-                VDL Citea LLE
               </td>
             </tr>
             <tr class="info-det">
@@ -343,7 +327,6 @@
               <td class="first">Articulated Buses</td>
               <td class="second">
                 MAN Lion's City NG313F A23<br>
-                Mercedes-Benz O530G Citaro G (LHD)
               </td>
             </tr>
           </tbody>
@@ -355,61 +338,43 @@
     <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
       <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
-        Download the Fonts <a href="omsi-developer-files.html"><b>here</b></a>
+        Download the Fonts, Sceneryobjects & Splines <a href="omsi-developer-files.html"><b>here</b></a>
         before
         downloading the Map.
-      </div>
-
-      <div class="alert alert-warning alert-dismissible wow fadeInUp" data-wow-delay="900ms" role="alert"
-        style="margin-top: 0.5em; cursor: default; font-size: 14px;">
-        The Default Buses in the AI Lists are the <a href="../releases/vdl-clle.html">VDL Citea 12m</a> and <a
-          href="../releases/solaris-urbino-18.html.html">Solaris Urbino 18</a>. You may change to your
-        own buses via ailists.cfg
-        <button type="button" class="btn-close cls-warning" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
 
       <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Routes</h3>
       <div class="row justify-content-center">
 
         <div class="accordion" id="accordBuses">
+
           <div class="accordion-item">
-            <h2 class="accordion-header " id="heading3.0-BETA2">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse3.0-BETA2" aria-expanded="true" aria-controls="collapse3.0-BETA2">
-                <b>Version 3.0-BETA2 - 25/12/24</b>
+            <h2 class="accordion-header " id="heading2.0">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2.0"
+                aria-expanded="true" aria-controls="collapse2.0">
+                <b>Version 2.0 - 25/03/24</b>
               </button>
             </h2>
-            <div id="collapse3.0-BETA2" class="accordion-collapse collapse show" aria-labelledby="heading3.0-BETA2"
+            <div id="collapse2.0" class="accordion-collapse collapse show" aria-labelledby="heading2.0"
               data-bs-parent="#accordBuses">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Migration from Stationlinks to Track & Trips Path System <br>
-                  - Major rationalization of Services - Introduction of new services 982, 300, amendments of
-                  most
-                  services. <br>
-                  - New Adboards by Stellar Ace (selected Bus stops). <br>
+                  - New Balmoral, Woodlands Int & International Airport Ter <br>
+                  - New Services 881 and 886. Renumbered IKEA Shuttle to 407. <br>
                   - EDS formatting switched to SMRT's Mobitec format. <br>
-                  - Announcement will be progressively updated
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/maps.7z"
+                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Map</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/HT_Sceneryobjects.7z"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Sceneryobjects</a>
-
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/HT_Splines.7z"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Splines</a>
-
-                <a href="https://github.com/smrtosg/Hillgrove-Woodlands-Town/releases/download/v3.0/Vehicles.7z"
+                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Vehicles.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Vehicles (For Announcements/EDS)</a>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -419,24 +384,23 @@
 
 
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
-                    </p>
-                </div>
-            </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
         </div>
-    </footer>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
