--- a/omsi-2.html
+++ b/omsi-2.html
@@ -318,7 +318,7 @@
               <img src="img/releases-ss/dfA.png" alt="dfom">
               <div class="hover-content-blog">
                 <h4>OMSI 2 Developer Files</h4>
-                <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
+                <a class="info" href="releases/omsi-developer-files.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
