--- a/releases/omsi-developer-files.html
+++ b/releases/omsi-developer-files.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Dev Files (STARiS/CDD-CLD/VFD) | SMRTO</title>
+  <title>OMSI 2 Developer Files | SMRTO</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -57,8 +57,8 @@
     <nav class="navbar navbar-mobile">
       <a href="../index.html" class="nav-item">Home</a>
       <a href="../about.html" class="nav-item">About</a>
-      <a href="../openbve.html" class="nav-item active">OpenBVE</a>
-      <a href="../omsi-2.html" class="nav-item">OMSI 2</a>
+      <a href="../openbve.html" class="nav-item">OpenBVE</a>
+      <a href="../omsi-2.html" class="nav-item active">OMSI 2</a>
       <a href="../blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item">
         <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
@@ -69,7 +69,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(../img/releases-ss/r151A.png); height: 100vh;">
+    style="background-image: url(../img/releases-ss/dfC.jpg); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -79,14 +79,14 @@
               <div class="main-title">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../openbve.html"> OpenBVE</a>
+                    <li class="breadcrumb-item"><a href="../omsi-2.html"> OMSI 2</a>
                     </li>
                     <li class="breadcrumb-item active"><a href="#">Developer Files
                       </a>
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">Dev Files (STARiS/CDD-CLD/VFD)</h1>
+                <h1 class="brc">OMSI 2 Developer Files</h1>
               </div>
             </div>
           </div>
@@ -107,10 +107,10 @@
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
               <div class="social_links">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/dev-files-staris-cddcld-vfd.html"
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/omsi-developer-files.html"
                   title="Facebook">
                   <i class="fa-brands fa-facebook"></i> </a>
-                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/dev-files-staris-cddcld-vfd.html&text=Dev Files (STARiS/CDD-CLD/VFD)"
+                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/omsi-developer-files.html&text=OMSI 2 Developer Files"
                   title="X (Twitter)">
                   <i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -137,12 +137,9 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">Want to develop your own STARiS, Car Door
-                      Display,
-                      Ceiling-Level Displays and the STARiS VFD? You can try out and download the SVG files and Fonts to
-                      get
-                      started!<br><br>
-                      Recommended App to be used: <a href="https://inkscape.org/" target="_blank">Inkscape</a><br></p>
+                    <p style="text-align: center; padding-bottom: 2em;">Facing issues? You can try and download the
+                      Developer's copy of Fonts, Sceneryobjects, Splines folder and the K++ Scripts and then see if the
+                      problems are solved.</p>
                   </div>
                 </div>
               </div>
@@ -151,37 +148,19 @@
         </div>
 
 
-        <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-          <a href="../img/releases-ss/devfile-opC.png" class="portfolio-img" id="devfile-opC"><img
-              src="../img/releases-ss/devfile-opC.png" class="img-fluid" id="devfile-opC-img" alt="devfile-opC-img"></a>
-        </div>
-
         <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/r151A.png" class="portfolio-img" id="r151A" alt="r151A"><img
-                    src="../img/releases-ss/r151A.png" class="img-fluid" id="r151A-img" alt="r151A-img"></a>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6">
-              <div class="thumb">
-                <a href="../img/releases-ss/ryl1502.png" class="portfolio-img" id="ryl1502" alt="ryl1502"><img
-                    src="../img/releases-ss/ryl1502.png" class="img-fluid" id="ryl1502-img" alt="ryl1502-img"></a>
+                <a href="../img/releases-ss/dfA.png" class="portfolio-img" id="dfA" alt="dfA"><img
+                    src="../img/releases-ss/dfA.png" class="img-fluid" id="dfA-img" alt="dfA-img"></a>
               </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/151cb2.png" class="portfolio-img" id="151cb2" alt="151cb2"><img
-                    src="../img/releases-ss/151cb2.png" class="img-fluid" id="151cb2-img" alt="151cb2-img"></a>
-              </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6">
-              <div class="thumb">
-                <a href="../img/releases-ss/151a4.png" class="portfolio-img" id="151a4" alt="151a4"><img
-                    src="../img/releases-ss/151a4.png" class="img-fluid" id="151a4-img" alt="151a4-img"></a>
+                <a href="../img/releases-ss/dfB.jpg" class="portfolio-img" id="dfB" alt="dfB"><img
+                    src="../img/releases-ss/dfB.jpg" class="img-fluid" id="dfB-img" alt="dfB-img"></a>
               </div>
             </div>
           </div>
@@ -189,31 +168,48 @@
       </div>
     </div>
 
-
     <!-- Downloads -->
     <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+
+      <div class="alert alert-danger wow fadeInUp" data-wow-delay="900ms" role="alert"
+        style="margin-top: 1em; cursor: default; font-size: 14px;">
+        Make a backup of these first before overwriting. We will not be liable for any problems occurring.
+      </div>
+
       <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Modifications</h3>
       <div class="row justify-content-center">
 
         <div class="accordion" id="accordMods">
 
           <div class="accordion-item">
-            <h2 class="accordion-header" id="heading1.3">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.3"
-                aria-expanded="true" aria-controls="collapse1.3">
-                <b>Version 1.3 - 24/01/25</b>
+            <h2 class="accordion-header " id="heading1.0">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.0"
+                aria-expanded="true" aria-controls="collapse1.0">
+                <b>Version 1.0 - 25/03/24</b>
               </button>
             </h2>
-            <div id="collapse1.3" class="accordion-collapse collapse show" aria-labelledby="heading1.3"
+            <div id="collapse1.0" class="accordion-collapse collapse show" aria-labelledby="heading1.0"
               data-bs-parent="#accordMods">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Added SVG Files for WTL CDD/CLDs (RW105/RW110A)
-                </h3> <br><br>
+                  - Initial Release
+                </h3><br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/STARiS-CDDCLD.Dev.Files.7z"
+                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Fonts-Humans.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Dev Files</a>
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Fonts/Humans Files</a>
+
+                <a href="https://mega.nz/file/YRUhmRJR#XpKhE1t7hSa16XtK6llX6BmmEhcIPI1haKnSJT1q9b4"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Sceneryobjects Files</a>
+
+                <a href="https://mega.nz/file/tJUwQIZR#rkxL9yS9lrrS6dPCD7MsbAg2K9ELWVmxQh_KBELpPm4"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Splines Files</a>
+
+                <a href="https://mega.nz/file/RIcymA5T#msKbuxNnYe3Si5VNSZuKk1rZibpc9Ju4RrIRIn1k_5I"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;K++ Files</a>
               </div>
             </div>
           </div>
@@ -224,28 +220,28 @@
 
     </div>
 
+
   </section>
 
 
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
-                    </p>
-                </div>
-            </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
         </div>
-    </footer>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -320,7 +316,6 @@
         themeIcon.classList.remove('animate');
       }, 300); // Match the duration of the CSS transition
     }
-
   </script>
 
 </body>
